nvda-ingress.yaml
# @format

apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nvda-remote
  namespace: nvda

spec:
  entryPoints:
    - nvda

  routes:
    - match: HostSNI(`nvda-idas-server-remote.com`)
      services:
        - name: nvda-server-relay
          port: 6837
